# CleanFolder

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-30-offline-npu-file-renamer.md  2026-06-02-article-llm-analyzer.md
docs/superpowers/specs/: 2026-05-30-offline-npu-file-renamer-design.md  2026-06-02-article-llm-analyzer-design.md
models/: manifest.json
models/openvino/Phi-3.5-mini-instruct-int4-ov/: config.json  generation_config.json  openvino_detokenizer.xml  openvino_model.xml  openvino_tokenizer.xml
scripts/: fetch_models.py
src/offline_npu_renamer/: app.py
src/offline_npu_renamer/core/: analyzer.py  article_analysis.py  article_llm.py  extractors.py  filenames.py  model_assets.py  models.py  npu.py  rename_log.py  renamer.py  scanner.py
src/offline_npu_renamer/ui/: main_window.py
tests/: test_analyzer.py  test_app_import.py  test_article_analysis.py  test_article_llm.py  test_filenames.py  test_model_assets.py  test_pdf_fallback.py  test_renamer.py  test_scanner.py
