[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-npu-renamer"
version = "0.1.0"
description = "Offline Windows desktop app for NPU-gated content-based file renaming."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "onnxruntime-openvino==1.24.1",
  "openvino==2025.4.1",
  "pillow>=10.0",
  "pymupdf>=1.24",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "PySide6>=6.7",
  "rapidocr>=3.8",
]

[project.optional-dependencies]
dev = ["huggingface-hub>=0.23", "pytest>=8.0"]

[project.scripts]
offline-npu-renamer = "offline_npu_renamer.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
